<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_advanced">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_settings_shield"
            android:key="cb_block_ads"
            android:title="@string/block_ads"/>
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_settings_shield"
            android:key="cb_ublock_origin"
            android:summary="@string/ublock_origin_summary"
            android:title="@string/ublock_origin"/>
        <Preference
            android:icon="@drawable/ic_settings_globe"
            android:key="preference_hosts_source"
            android:summary="@string/block_source_default"
            android:title="@string/block_ad_source"/>
        <Preference
            android:icon="@drawable/ic_action_refresh"
            android:key="preference_hosts_refresh_force"
            android:summary="@string/block_ad_remote_refresh_frequency_description"
            android:title="@string/block_ad_refresh_now"/>
    </PreferenceCategory>
</PreferenceScreen>
