<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_about">
        <com.krystelligence.solipsism.settings.preference.AboutHeaderPreference
            android:key="about_header" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_updates">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_history"
            android:key="release_notes_enabled"
            android:title="@string/release_notes_enabled"
            android:summary="@string/release_notes_enabled_summary" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_settings_download"
            android:key="update_notifications_enabled"
            android:title="@string/update_notifications_enabled"
            android:summary="@string/update_notifications_enabled_summary" />
    </PreferenceCategory>
</PreferenceScreen>
